# subtext

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml
python-server/: gpu_utils.py  inference.py  llm_engine.py  main.py  models.py  requirements.txt  stt_engine.py  stt_router.py  subtitle_formatter.py  test_api_endpoints.py  test_job_management.py  test_prompt_builder.py  test_subtitle_formatter.py  translate_router.py
scripts/: download-python-embed.ps1
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  commands_export.rs  commands_model.rs  commands_runtime.rs  commands_stt.rs  commands_translate.rs  config_manager.rs  error.rs  job.rs  job_manager.rs  lib.rs  main.rs  manifest_manager.rs  model_downloader.rs  preset_manager.rs  python_manager.rs  setup_manager.rs  sse_client.rs  state.rs  subtitle_writer.rs
src/__mocks__/: tauri-app.ts
src/__tests__/: subtitleOps.test.ts
src/components/: ErrorBoundary.tsx  InferenceForm.tsx  JobCard.tsx  JobList.tsx  Progress.tsx  ServerControl.tsx  SetupScreen.tsx  app-sidebar.tsx
src/components/dashboard/: DashboardPage.tsx  JobStatusBadge.tsx  NewJobDialog.tsx
src/components/editor/: EditPanel.tsx  EditorPage.tsx  (+4 more)
src/hooks/: useConfig.ts  useJobs.ts  useModels.ts  usePipeline.ts  usePresets.ts  useRuntime.ts  useServerStatus.ts  useSetup.ts  useStt.ts
src/lib/: sttCleaner.ts  subtitleOps.ts  tauriApi.ts  toast.ts
(+35 files in other folders)
