[package]
name = "subtext"
version = "0.1.0"
edition = "2021"

[lib]
name = "subtext_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
futures = "0.3"
sha2 = "0.10"
tokio-util = "0.7"
dirs = "6"
sysinfo = "0.33"
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2.3.3"
